[CAMP-1980] fix dropdown/input sizing on mobile and colors to match figma

--- a/packages/ui/sass/components/inputs.scss
+++ b/packages/ui/sass/components/inputs.scss
@@ -1,4 +1,4 @@
-$input-border: 2px solid #ccc;
+$input-border: 2px solid $light-gray;
 
 .fieldset {
   display: flex;
@@ -23,7 +23,7 @@ $input-border: 2px solid #ccc;
     }
 
     &--inline .input {
-      flex: 1;
+      flex: auto;
     }
   }
 
@@ -71,7 +71,7 @@ $input-border: 2px solid #ccc;
 
   &::placeholder {
     font-weight: 300;
-    color: #ccc;
+    color: $light-gray;
     opacity: 1;
   }
 
@@ -93,7 +93,7 @@ $input-border: 2px solid #ccc;
 
   &--rounded {
     border: 2px solid;
-    border-color: #ccc;
+    border-color: $light-gray;
     border-radius: 999px;
     box-sizing: border-box;
     height: 41px;
@@ -104,7 +104,7 @@ $input-border: 2px solid #ccc;
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
-    background: url('https://s3.amazonaws.com/cgcdn/global-ui/images/icons/arrow-down-solid.svg');
+    background-image: url('https://s3.amazonaws.com/cgcdn/global-ui/images/icons/arrow-down-solid.svg');
     background-position: 95% 50%;
     background-repeat: no-repeat;
     background-size: 16px;
