--- a/packages/ui/sass/components/labels.scss
+++ b/packages/ui/sass/components/labels.scss
@@ -1,6 +1,7 @@
 .label {
   display: inline-block;
   font-family: $font-primary;
+  font-weight: 400;
   font-size: 14px;
   letter-spacing: 1.53px;
   color: $medium-gray;
